[package]
name = "graymamba"
version = "3.0.1"
edition = "2021"
description = "A Rust Secure Provenance Tracking Filesystem"
repository = "https://github.com/gmawdo/secure-provenance-tracking-filesystem"
readme = "README.md"
keywords = ["nfs"]
license = "MIT"
categories = ["network-programming", "filesystem"]
publish = true
include = ["src/**/*", "src/*", "Cargo.toml", "LICENSE", "README.md"]

[lib]
doctest = false

[dependencies]
# Core utilities
lazy_static = "1.4.0"
byteorder = "1.4"
num-traits = "0.2"
num-derive = "0.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.21"
filetime = "0.2"
bytes = "1.6.0"
base64 = "0.22.1"
regex = "1.10.4"

# Error handling and async
anyhow = "1"
async-trait = "0.1.9"
thiserror = "1.0"

# Data structures and serialization
smallvec = "1.10.0"
toml = "0.8.12"
serde_json = "1.0.117"
num-bigint = { version = "0.2.6", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
hex = "0.4.3"
bincode = "1.3"

# Storage
redis = "0.25.3"
r2d2_redis_cluster2 = "0.23.3"

rocksdb = "0.22.0"

# Parallel processing
rayon = "1.10.0"

# Secret sharing
secretsharing = { path = "./secretsharing_wrapper" }

# WASM runtime
wasmtime = "21.0.1"

# Logging and tracing
tracing = "0.1.31"
tracing-attributes = "0.1"
env_logger = "0.11.3"

# Configuration and time
once_cell = "1.19.0"
config = "0.11"
chrono = "0.4"

# Optional dependencies for tracing
tracing-subscriber = { version = "0.3", features = ["tracing-log"], optional = true }
intaglio = { version = "1.6", optional = true }

# required for Polkadot substrate, Aleph Zero blockchain integration
#subxt = { version = "0.37.0", optional = true }
#subxt-signer = { version = "0.37.0", optional = true }
# Substrate specific
#frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true  }
#frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true  }
#pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true }
#pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true }
#pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true }

#sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" , optional = true}
#sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" , optional = true}
#sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" , optional = true}
#sp-weights = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" , optional = true}

sha2 = "0.10"
parking_lot = "0.12"

[features]
strict = []
traceability = ["tracing-subscriber", "tokio/rt-multi-thread", "intaglio"]
irrefutable_audit = []

[[bin]]
name = "graymamba"
path = "src/graymamba.rs"
required-features = ["traceability"]
[[bin]]
name = "audit_reader"
path = "src/bin/audit_reader.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "readdir_benchmark"
harness = false