[package]
name = "nfsclient"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde-xdr = "0.6"
byteorder = "1.4"  # For handling byte order when reading header
anyhow = "1.0"  # For easier error handling
bincode = "1.3"  # For binary serialization/deserialization