[package]
name = "graymamba"
version = "3.0.2"
edition = "2021"
description = "A Rust Secure Provenance Tracking Filesystem"
repository = "https://github.com/gmawdo/secure-provenance-tracking-filesystem"
readme = "README.md"
keywords = ["nfs"]
license = "MIT"
categories = ["network-programming", "filesystem"]
publish = true
include = ["src/**/*", "src/*", "Cargo.toml", "LICENSE", "README.md"]

[lib]
doctest = false

[dependencies]
# Core utilities
lazy_static = "1.4.0"
byteorder = "1.4"
num-traits = "0.2"
num-derive = "0.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.21"
filetime = "0.2"
bytes = "1.6.0"
base64 = "0.22.1"
regex = "1.10.4"

# Error handling and async
anyhow = "1"
async-trait = "0.1.9"
thiserror = "1.0"

# Data structures and serialization
smallvec = "1.10.0"
toml = "0.8.12"
serde_json = "1.0.117"
num-bigint = { version = "0.2.6", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
hex = "0.4.3"
bincode = "1.3"

# Storage
redis = "0.25.3"
r2d2_redis_cluster2 = "0.23.3"

rocksdb = "0.20"

# Parallel processing
rayon = "1.10.0"

# WASM runtime
wasmtime = "24.0.2"

# Logging and tracing
tracing = "0.1.31"
tracing-attributes = "0.1"
env_logger = "0.11.3"

# Configuration and time
once_cell = "1.19.0"
config = "0.11"
chrono = "0.4"

# required for Polkadot substrate, Aleph Zero blockchain integration
subxt = { version = "0.37.0", optional = true }
subxt-signer = { version = "0.37.0", optional = true }
# Substrate specific
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true  }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true  }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true }

sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" , optional = true}
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" , optional = true}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" , optional = true}
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" , optional = true}

sha2 = "0.10"
parking_lot = "0.12"

shamir_secret_sharing = "0.1.1"
dashmap = "6.0.1"
flate2 = "1.0.31"

ark-ff = { version = "0.4.0", default-features = false }
ark-bn254 = "0.4.0"
ark-serialize = "0.4.0"
ark-ec = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["r1cs", "crh"] }
ark-groth16 = "0.4.0"
ark-std = { version = "0.4.0", features = ["std"] }
ark-snark = "0.4.0"

iced = { version = "0.12.1", features = ["advanced", "system", "svg", "canvas"] }

tempfile = "3.14.0"

url = "2.4"

tracing-subscriber = { version = "0.3", features = ["env-filter","std","tracing-log"] }
intaglio = { version = "1.6", optional = true }

prometheus = { version = "0.13", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["full"] }
http-body-util = "0.1"

[features]
strict = []
#traceability = ["tracing-subscriber", "tokio/rt-multi-thread", "intaglio"]
#default = ["merkle_audit","rocksdb_store","compressed_store"]  
compressed_store = []
merkle_audit = []
az_audit = [
    "subxt",
    "subxt-signer",
    "frame-support",
    "frame-system",
    "pallet-balances",
    "pallet-identity",
    "pallet-staking",
    "sp-core",
    "sp-keyring",
    "sp-runtime",
    "sp-weights"
]
redis_store = []
rocksdb_store = []
metrics = ["prometheus", "hyper"]

[[bin]]
name = "graymamba"
path = "src/bin/graymamba/main.rs"
[[bin]]
name = "audit_reader"
path = "src/bin/audit_reader/main.rs"
[[bin]]
name = "qrocks"
path = "src/bin/qrocks/main.rs"
[[bin]]
name = "data_room"
path = "src/bin/data_room/main.rs"
[[bin]]
name = "nfsclient"
path = "src/bin/nfsclient/main.rs"

[package.metadata.bundle.bin.qrocks]  # ties to the binary named "qrocks"
name = "RocksDB Explorer"

# Or for multiple binaries:
[package.metadata.bundle.bin.graymamba]
name = "Gray Mamba"

[package.metadata.bundle.bin.audit_reader]
name = "Audit Reader"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "readdir_benchmark"
harness = false
